# cpp

./: .gitignore  CMakeLists.txt  main.cpp
include/: _main.h  array_size.h  consteval.h  constinit.h  envp.h
src/: _main.cpp  envp.cpp
